--- a/index.html
+++ b/index.html
@@ -2,12 +2,17 @@
 <html lang="zh-tw">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
   <link rel="stylesheet" href="style.css">
   <title>Welcome to Myra’s Site!!!</title>
 </head>
   <body>
     <div id="nav">
       <div class="container">
+        <button type="button" class="menu-button">
+          三
+        </button>
+        <input type="checkbox" class="menu-button-checkbox">
         <ul class="menu">
           <li><a href="#about">選單一</a></li>
           <li><a href="#my-work">選單二</a></li>
